Initial port to 1.19